--- a/www/package.json
+++ b/www/package.json
@@ -10,7 +10,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.14",
 		"mdsvex": "^0.11.0",
@@ -19,13 +19,14 @@
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^5.0.0-next.1",
+		"svelte-hamburgers": "^4.2.0",
 		"tailwindcss": "^3.3.2",
+		"clsx": "^2.0.0",
+		"prettier-plugin-svelte": "^3.1.2",
+		"tailwind-merge": "^1.14.0",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-static": "^2.0.3",
-		"lucide-svelte": "^0.294.0",
-		"prettier-plugin-svelte": "^3.1.2"
-	}
+	"dependencies": {}
 }
