--- a/www/package.json
+++ b/www/package.json
@@ -11,22 +11,25 @@
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.4",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.14",
+		"clsx": "^2.0.0",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.0",
+		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^5.0.0-next.1",
 		"svelte-hamburgers": "^4.2.0",
-		"tailwindcss": "^3.3.2",
-		"clsx": "^2.0.0",
-		"prettier-plugin-svelte": "^3.1.2",
 		"tailwind-merge": "^1.14.0",
-		"@sveltejs/adapter-static": "^2.0.3",
+		"tailwindcss": "^3.3.2",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
-	"dependencies": {}
+	"dependencies": {
+		"mode-watcher": "^0.1.2",
+		"sveltekit-i18n": "^2.4.2"
+	}
 }
