--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/enhanced-img": "^0.1.7",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.14",
 		"clsx": "^2.0.0",
@@ -29,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"mdsvex-relative-images": "^1.0.3",
 		"mode-watcher": "^0.1.2",
 		"sveltekit-i18n": "^2.4.2"
 	}
