--- a/www/package.json
+++ b/www/package.json
@@ -10,28 +10,27 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@iconify/svelte": "^3.1.4",
+		"@iconify/svelte": "^3.1.6",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/enhanced-img": "^0.1.7",
-		"@sveltejs/kit": "^1.27.4",
-		"autoprefixer": "^10.4.14",
+		"@sveltejs/kit": "^1.30.3",
+		"autoprefixer": "^10.4.16",
 		"clsx": "^2.0.0",
-		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.0",
+		"mode-watcher": "^0.1.2",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^4.0.2",
+		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^4.2.8",
 		"svelte-hamburgers": "^4.2.0",
+		"sveltekit-i18n": "^2.4.2",
 		"tailwind-merge": "^1.14.0",
-		"tailwindcss": "^3.3.2",
-		"vite": "^4.4.2"
+		"tailwindcss": "^3.4.0",
+		"vite": "^4.5.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"mdsvex-relative-images": "^1.0.3",
-		"mode-watcher": "^0.1.2",
-		"sveltekit-i18n": "^2.4.2"
+		"mdsvex": "^0.11.0"
 	}
 }
