--- a/www/package.json
+++ b/www/package.json
@@ -15,7 +15,7 @@
 		"@sveltejs/enhanced-img": "^0.1.7",
 		"@sveltejs/kit": "^1.30.3",
 		"autoprefixer": "^10.4.16",
-		"clsx": "^2.0.0",
+		"clsx": "^2.1.0",
 		"mode-watcher": "^0.1.2",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^4.0.2",
@@ -24,13 +24,13 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^4.2.8",
 		"svelte-hamburgers": "^4.2.0",
+		"svelte-preprocess-import-assets": "^1.1.0",
 		"sveltekit-i18n": "^2.4.2",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "^3.4.0",
+		"mdsvex": "^0.11.0",
 		"vite": "^4.5.1"
 	},
 	"type": "module",
-	"dependencies": {
-		"mdsvex": "^0.11.0"
-	}
+	"dependencies": {}
 }
