--- a/www/package.json
+++ b/www/package.json
@@ -24,6 +24,7 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^4.2.8",
 		"svelte-hamburgers": "^4.2.0",
+		"svelte-preprocess-import-assets": "^1.1.0",
 		"sveltekit-i18n": "^2.4.2",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "^3.4.0",
@@ -31,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-preprocess-import-assets": "^1.1.0"
+		"@tailwindcss/line-clamp": "^0.4.4",
+		"jquery": "^3.7.1"
 	}
 }
