--- a/www/package.json
+++ b/www/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-auto": "^3.0.1",
 		"@tailwindcss/line-clamp": "^0.4.4",
 		"jquery": "^3.7.1"
 	}
